# stylemakar

./: .gitignore  .oxfmtrc.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  design-qa.md  evals-spec.md  index.html  oxlint.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.server.json  tsdown.config.ts  vite.config.ts  vitest.config.ts
.github/: renovate.json5
.github/workflows/: pages.yml  quality.yml  release.yml
design/mobile-ux-review/: hybrid-mobile-plan.md  review.md
docs/: index.md
docs/.vitepress/: config.ts
docs/design/: stylemakar-option-three-qa.md
docs/guide/: cli.md  desktop.md  development.md  getting-started.md  index.md  install.md  providers.md  reference.md  tutorials.md
docs/quality/: manual-accessibility-smoke.md
docs/reports/: eval-findings.md
docs/specs/: app-release-readiness-checklist.md  comprehensive-evals-and-dataset-plan.md  evals.md  high-impact-product-improvements-plan.md  personal-voice-training-plan.md  release-notes-template.md  release-notes-v0.1.1.md  student-feedback-meaning-policy.md  tauri-desktop-app-plan.md  tauri-desktop-deployment-plan.md  ui-option-three-plan.md
e2e/: mockProvider.ts  product-journeys.spec.ts
evals/: cases-smoke.yaml  cases.yaml  promptfoo-smoke.yaml  promptfoo.yaml
evals/assertions/: no-generic-ai.js  (+2 more)
scripts/: build-unsigned-macos-dmg.mjs
src/: cli.test.ts  cli.ts  skill.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+77 files in other folders)
