[package]
name = "stylemakar"
version = "0.1.0"
description = "Local-first style rewriting app"
authors = ["Tom Auger <tom@tau.gr>"]
edition = "2021"
license = "MIT"

[lib]
name = "stylemakar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
